<resources>
    <string name="app_name">MoodTracker</string>

    <!-- MainActivity -->

    <!-- comment_dialog -->
    <string name="title_comment">Comment</string>
    <string name="hint_comment">Your comment here!</string>
    <string name="button_valid_comment">OK</string>
    <string name="button_cancel_comment">Cancel</string>

    <!-- wrong_date_dialog -->
    <string name="title_wrong_date">Wrong Date</string>
    <string name="message_wrong_date">"The Date is lower than the last saved, correct it on your device and then press OK. Or, if you want, you can delete all moods and comments saved, so press Delete."</string>
    <string name="button_valid_date">OK</string>
    <string name="button_delete_mood">Delete</string>
    <string name="toast_date_always_wrong">The date is always wrong, correct it!!</string>
    <string name="toast_all_mood_delete">All mood was delete!</string>

    <!-- activity_main.xml -->
    <string name="content_description_comment">button comment</string>
    <string name="content_description_history">button history</string>

    <!-- imagesView for fragments-->
    <string name="content_description_super_happy">smiley supper happy</string>
    <string name="content_description_happy">smiley happy</string>
    <string name="content_description_normal">smiley normal</string>
    <string name="content_description_disappointed">smiley disappointed</string>
    <string name="content_description_sad">smiley sad</string>


    <!-- MoodHistoryActivity -->
    <string name="activity_mood_history">MoodTracker History</string>

    <string name="no_mood">"No Mood saved!!"</string>
    <string name="content_description_share_sms">Share_Sms</string>
    <string name="text_yesterday">Yesterday</string>
    <string name="text_day">"There's %1$d Days"</string>
    <string name="text_day3">"There's 3 Days"</string>
    <string name="text_day4">"There's 4 Days"</string>
    <string name="text_day5">"There's 5 Days"</string>
    <string name="text_day6">"There's 6 Days"</string>
    <string name="text_week">"There's %1$d Week"</string>
    <string name="text_month">"There's %1$d Month</string>
    <string name="text_year">"There's %1$d Year</string>
    <string name="text_problem">"There's a problem with the date!</string>
    <string name="mood_day_super_happy">", i was :D because : "</string>
    <string name="mood_day_happy">", i was :) because : "</string>
    <string name="mood_day_normal">", i was :| because : "</string>
    <string name="mood_day_disappointed">", i was :/ because : "</string>
    <string name="mood_day_sad">", i was :( because : "</string>

</resources>
