<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comment_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_comment"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

    <android.support.design.widget.TextInputEditText
        android:id="@+id/write_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_comment"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/write_comment"
        android:layout_alignParentBottom="false"
        android:layout_marginStart="130dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/button_valid_comment"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/write_comment"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="130dp"
        android:background="@android:color/transparent"
        android:text="@string/button_cancel_comment"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>