<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.desperu.moodtracker.VerticalViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:isScrollContainer="true">

        <RelativeLayout
            android:id="@+id/empty_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"></RelativeLayout>

        <RelativeLayout
            android:id="@+id/comment_dialog"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:gravity="center">

            <TextView
                android:id="@+id/Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="false"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/title_comment"
                android:textColor="@android:color/tertiary_text_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/write_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/Title"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_comment"
                android:inputType="text"
                android:textColorHighlight="@color/colorAccent"
                android:textColorLink="@color/colorPrimary"
                android:textCursorDrawable="@color/colorAccent" />

            <Button
                android:id="@+id/ok_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/write_comment"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/cancel_button"
                android:background="@android:color/transparent"
                android:text="@string/button_valid_comment"
                android:textColor="@color/colorPrimary" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/write_comment"
                android:layout_marginStart="180dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:text="@string/button_cancel_comment"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

    </ViewSwitcher>

    <ImageButton
        android:id="@+id/comment_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_comment"
        android:src="@drawable/ic_note_add_black" />

    <ImageButton
        android:id="@+id/history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_history"
        android:src="@drawable/ic_history_black" />

</RelativeLayout>